# hand-mocap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Data/: CMakeLists.txt
Data/include/: MarkerFileInput.h
Data/src/: MarkerFileInput.cpp
Data/tests/: CMakeLists.txt  FileReadTest.cpp
IK/: CMakeLists.txt
IK/include/: IK.h
IK/src/: IK.cpp  ik_test.cpp
Labeling/: CMakeLists.txt
Labeling/include/: BaseCNN.h  CNN.h  DataLoader.h  DataLoaderTotal.h  ImageMethod.h  ImagePCA.h  ImagePalm.h  ImageRandom.h  MarkerLabeling.h  SpatialVariance.h  VGG8.h  marker_label.h  marker_matching.h
Labeling/src/: CNNTraining.cpp  Calibration.cpp  ImageMethod.cpp  ImagePCA.cpp  ImagePalm.cpp  ImageRandom.cpp  LabelFromFile.cpp  LabelingAccuracy.cpp  MarkerLabeling.cpp  TrainingData.cpp  marker_label.cpp  marker_matching.cpp
Labeling/tests/: CMakeLists.txt  ImageTest.cpp
cmake/: lemon.cmake
include/: Marker.h  Metadata.h
interfaces/: CMakeLists.txt  ue_interface.cpp  ue_interface.h
main/: CMakeLists.txt  pipeline.cpp
